Fix issue with lobby width on mobile

--- a/tools/themes/mobile.css
+++ b/tools/themes/mobile.css
@@ -1,5 +1,9 @@
 /* Mobile */
 
+body.lichessTools.lichessTools-theme_mobile.mobile main.lobby > * {
+  max-width: calc(100vw - 4px);
+}
+
 body.lichessTools.lichessTools-theme_mobile.mobile {
   ---site-header-height: 30px;
   ---site-header-margin: 4px;
